# psn_api_service

./: .dockerignore  .env_example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
frontend_service/: README.md  pubspec.yaml
frontend_service/lib/: main.dart
frontend_service/lib/api/: PSNAPI.dart  Storage.dart
frontend_service/lib/bloc/: ErrorBloc.dart  PSNBloc.dart
frontend_service/lib/page/: HomePage.dart
frontend_service/lib/widget/: MarkDownWidget.dart  PSNRequestTextFieldWidget.dart  PSNResponseWidget.dart
frontend_service/test/: widget_test.dart
frontend_service/web/: index.html  manifest.json
src/: captcha_solver.rs  error.rs  extractor.rs  handler.rs  main.rs  model.rs  routes.rs  startup.rs
